2024-04-28  Philippe Michel  <philippe.michel7@free.fr>

	Version 1.08.003 released.

2024-02-24  Philippe Michel  <philippe.michel7@free.fr>

	Version 1.08.002 released.

2024-02-18  Philippe Michel  <philippe.michel7@free.fr>

	* gnubg.c: Fix potential corruption of gnubgautorc file.

2024-02-04  Philippe Michel  <philippe.michel7@free.fr>

	Version 1.08.001 released.

2024-01-01  Philippe Michel  <philippe.michel7@free.fr>

	* eval.c, eval.h, gnubg.weights: Fix old quirk in the
	implementation of the PIPLOSS input (bug #65035). Retrain the
	neural nets using it. The effect on evaluation accuracy is
	marginally positive.

2023-12-20  Philippe Michel  <philippe.michel7@free.fr>

	* eval.c, eval.h, set.c, show.c: Use a different cube efficiency
	ratio for 0- and 1-ply evaluations (0.76 instead of 0.68).

	This improves cube decisions at these plies noticeably (cube
	error rates are approximately halved) and the repartition of
	errors (premature doubles vs. missed doubles vs. take or pass
	errors) is now similar to higher plies instead of being mostly
	premature doubles.

2023-12-18  Philippe Michel  <philippe.michel7@free.fr>

	* gtkgame.c, gtkgame.h, gtklocdefs.h, gtkpanels.c, gtktoolbar.c:
	* gtktoolbar.h: build the GTK2 version using GtkUIManager by
	default. To revert to GtkItemFactory, add -DUSE_GTKITEMFACTORY to
	the compilation flags.

2023-11-17  Isaac Keslassy <keslassy@gmail.com>

	* backgammon.h, commands.inc, gnubg.c, gtkgame.c, gtkgame.h:
	* gtkrelational.c, gtkuidefs.h, relational.c, relational.h:
	* show.c:

	Add a feature to show how the player's GNU error rate has evolved
	throughout the player's history, as provided by the database
	records.

2023-10-18  Philippe Michel  <philippe.michel7@free.fr>

	* met/cubeless.xml: Add cubeless MET contributed by Tilemachos Zoidis

2023-03-14  Philippe Michel  <philippe.michel7@free.fr>

	* dice.c, osr.c, credits.sh: replace the original Mersenne Twister
	RNG by the improved SFMT version.
