@@ -381,6 +381,7 @@ extern int fOutputRawboard;
 extern int fRecord;
 extern int fShowProgress;
 extern int fStyledGamelist;
+extern int fMarkedSamePlayer;
 extern int fTutor;
 extern int fTutorChequer;
 extern int fTutorCube;
@@ -931,6 +932,7 @@ extern void CommandSetSoundSoundStart(char *);
 extern void CommandSetSoundSoundTake(char *);
 extern void CommandSetSoundSystemCommand(char *);
 extern void CommandSetStyledGameList(char *);
+extern void CommandSetMarkedSamePlayer(char *);
 extern void CommandSetTheoryWindow(char *);
 extern void CommandSetThreads(char *);
 extern void CommandSetToolbar(char *);
